added statistics model and collection container to hold all large action cards

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,2 @@
 
-<ng-container *ngFor="let item of collectionItems">
-  <div class="container">
-  <large-action-card [collectionItem]="item"></large-action-card>    
-  </div>
-</ng-container>
+<collection-container></collection-container>
