Created the card style

--- a/src/app/large-action-card/large-action-card.component.html
+++ b/src/app/large-action-card/large-action-card.component.html
@@ -1,8 +1,21 @@
-<img src="{{collectionItem.background}}">
+<div class="row">
+    <div class="col-md-8">
+        <div class="ed-peper">
+            <div class="row">
+                <div class="col-xs-6">
+                    <div class="lgcard">
 
-<h1>{{collectionItem.title}}</h1>
-<h4> {{collectionItem.subtitle}}</h4>
-<p> {{collectionItem.text}}</p>
+                        <img src="{{collectionItem.background}}">
 
-<a href="https://{{collectionItem.link}}"><button type="button" class="btn btn-primary" >{{collectionItem.link}}</button></a>
+                        <h1>{{collectionItem.title}}</h1>
+                        <h4> {{collectionItem.subtitle}}</h4>
+                        <p> {{collectionItem.text}}</p>
 
+                        <a href="https://{{collectionItem.link}}"><button type="button"
+                                class="btn btn-primary">{{collectionItem.link}}</button></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
