--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
 
-<collection-container></collection-container>
+<div class="col-md-8"> 
+    <collection-container></collection-container>
+</div>
+<div class="col-md-4">
+    <statistics title="Speed" statistics="statistics"></statistics>
+</div>
