--- a/src/app/collection-container/collection-container.component.html
+++ b/src/app/collection-container/collection-container.component.html
@@ -2,4 +2,7 @@
     <div class="container">
         <large-action-card id="{{i}}" [collectionItem]="item"></large-action-card>    
     </div>
+    
 </ng-container>
+
+<statistics title="Speed" statistics="statistics"></statistics>
