changes to statistics column css and components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
-
-<div class="col-md-8"> 
-    <collection-container></collection-container>
-</div>
-<div class="col-md-4">
-    <statistics title="Speed" statistics="statistics"></statistics>
+<div class="row">
+    <div class="col-md-8">
+        <collection-container collectionTitle="My Lesson Plans"></collection-container>
+    </div>
+    <div class="col-md-4">
+        <statistics title_1="Speed" title_2="Time Spent" statistics="statistics"></statistics>
+    </div>
 </div>
