--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+.dashboard-container {
+    outline: none;
+    background: white;
+    border-radius: 5px;
+    padding: 30px;
+    box-shadow: 0 0 4px #999;
+    margin-bottom: 20px;
+}
