--- a/src/app/large-action-card/large-action-card.component.html
+++ b/src/app/large-action-card/large-action-card.component.html
@@ -1,7 +1,7 @@
 <div class="col-xs-6">
     <div id="{{id}}" class="lgcard">
 
-        <img src="{{collectionItem.background}}">
+        <img src="{{collectionItem.background}}" width="100%">
 
         <h1>{{collectionItem.title}}</h1>
         <h4> {{collectionItem.subtitle}}</h4>
