--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,3 +6,5 @@
         <statistics title_1="Speed" title_2="Time Spent" statistics="statistics"></statistics>
     </div>
 </div>
+
+<game-summary></game-summary>
