added game summary

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
-<div class="row">
-    <div class="col-md-8">
-        <collection-container collectionTitle="My Lesson Plans"></collection-container>
-    </div>
-    <div class="col-md-4">
-        <statistics title_1="Speed" title_2="Time Spent" statistics="statistics"></statistics>
-    </div>
-</div>
 
-<game-summary></game-summary>
+<div class="row">
+        <div class="col-md-8">
+            <collection-container collectionTitle="My Lesson Plans"></collection-container>
+        </div>
+        <div class="col-md-4">
+            <statistics title_1="Speed" title_2="Time Spent" statistics="statistics"></statistics>
+        </div>
+</div>
+<router-outlet></router-outlet>
