created a seperate dashboard

--- a/src/app/large-action-card/large-action-card.component.html
+++ b/src/app/large-action-card/large-action-card.component.html
@@ -7,7 +7,7 @@
         <h4> {{collectionItem.subtitle}}</h4>
         <p> {{collectionItem.text}}</p>
 
-        <a routerLink="/game-summary"><button type="button"
+        <a routerLink="/game-page"><button type="button"
                 class="btn btn-primary">{{collectionItem.link}}</button></a>
     </div>
 </div>
