--- a/src/app/small-action-card/small-action-card.component.html
+++ b/src/app/small-action-card/small-action-card.component.html
@@ -4,9 +4,10 @@
             <img src="{{gameCollectionItem.background}}" width="100%">
     
             <h1>{{gameCollectionItem.title}}</h1>
-            <h4> {{gameCollectionItem.subtitle}}</h4>
+            <hr>
+            <p> {{gameCollectionItem.subtitle}}</p>
     
-            <a routerLink="/game-page"><button type="button"
+            <a routerLink="/game-page"><button type="button" 
                     class="btn btn-primary">{{gameCollectionItem.link}}</button></a>
         </div>
     </div>
