--- a/src/app/small-action-card/small-action-card.component.css
+++ b/src/app/small-action-card/small-action-card.component.css
@@ -6,4 +6,5 @@
     cursor: pointer;
     box-shadow: 0 1px 4px 0 rgba(0,0,0,0.37);
     transition: box-shadow 0.18s cubic-bezier(0.4, 0, 0.2, 1);
+    flex:wrap;
 }
