Updated game page as well as added the placement test button

--- a/src/app/placement-test-popover/placement-test-popover.component.html
+++ b/src/app/placement-test-popover/placement-test-popover.component.html
@@ -1,4 +1,6 @@
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <div class="btn btn-outline-secondary" id="mybutton"
-        ngbPopover="Placement Test" popoverTitle="Customized popover"> <i class="fas fa-puzzle-piece"></i>
-        <i class="fas fa-puzzle-piece"></i>
+        ngbPopover="Placement Test" > 
+        <i class="fa fa-puzzle-piece" style="font-size:36px"></i>
 </div>
