--- a/src/app/game-collection-container/game-collection-container.component.html
+++ b/src/app/game-collection-container/game-collection-container.component.html
@@ -1,4 +1,7 @@
+
 <div class="dashboard-container " >
+                <h1>Home Row</h1>
+
         <h3>
             {{gameCollectionTitle}}
         </h3>
@@ -9,5 +12,14 @@
                     
                 </ng-container>
         </div>
+
+        <h1>Bottom Row</h1>
+        <div class="row">
+                        <ng-container *ngFor="let item of gameCollectionItems; let i = index">
+                
+                                <small-action-card id="{{i}}" [gameCollectionItem]="item"></small-action-card>    
+                            
+                        </ng-container>
+                </div>
     
 </div>
