--- a/src/app/game-page/game-page.component.html
+++ b/src/app/game-page/game-page.component.html
@@ -1,2 +1,4 @@
 <game-summary></game-summary>
 <game-collection-container></game-collection-container>
+<placement-test-popover></placement-test-popover>
+
