--- a/src/app/small-action-card/small-action-card.component.css
+++ b/src/app/small-action-card/small-action-card.component.css
@@ -1,5 +1,5 @@
 .smcard {
-    background-color: #f8f8f8;
+    background-color:none;
     border-radius: 3px;
     overflow: hidden;
     margin: 30px auto 0px auto;
@@ -8,3 +8,4 @@
     transition: box-shadow 0.18s cubic-bezier(0.4, 0, 0.2, 1);
     flex:wrap;
 }
+
