--- a/src/app/game-summary-bar/game-summary-bar.component.html
+++ b/src/app/game-summary-bar/game-summary-bar.component.html
@@ -1,6 +1,8 @@
+<div>
 <div class="game_summary">
         <span class="game_summary_value">0%</span> progress
         <span class="game_summary_sep">|</span><span class="game_summary_value">0</span> stars
         <span class="game_summary_sep">|</span>
         <span class="game_summary_value">0</span> points
+</div>
 </div>
