--- a/src/app/game-page/game-page.component.html
+++ b/src/app/game-page/game-page.component.html
@@ -1,4 +1,7 @@
 <game-summary></game-summary>
-<game-collection-container></game-collection-container>
+
 <placement-test-popover></placement-test-popover>
 
+<game-collection-container></game-collection-container>
+
+<numbered-scroll-bar></numbered-scroll-bar>
